--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
-    <string name="app_name">fitnessApp</string>
+    <string name="app_name">Fitness App</string>
     <string name="action_settings">Settings</string>
+    <string name="edit_weight">Weight</string>
+    <string name="edit_height">Height</string>
+    <string name="edit_age">Age</string>
+    <string name="button_next">Next</string>
 </resources>
